chore: Replacing collect() with toList() to mark intent.